force-app/main/default/objects/Test_Scenario__c.object
<CustomObject>
    <description>Test scenarios documented for specific Stories.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>What scenario is being tested?</description>
        <inlineHelpText>What scenario is being tested?</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Best case, what should the tester experience?</description>
        <inlineHelpText>Best case, what should the tester experience?</inlineHelpText>
        <label>Expected Result</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>What steps does a tester need to follow in order to test new/changed functionality?</description>
        <inlineHelpText>What steps does a tester need to follow in order to test new/changed functionality?</inlineHelpText>
        <label>Instructions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready to Test</fullName>
                </value>
                <value>
                    <fullName>Ready to Test</fullName>
                </value>
                <value>
                    <fullName>Test Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Scenario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Test Scenario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>